correction ratio contraste black-background

--- a/style.css
+++ b/style.css
@@ -748,7 +748,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color: rgb(58 57 54 / 56%);
     padding: 40px 40px 40px 40px;
 }
 
